# qemu98

./: .gitignore  BUILD.md  WIN9X_QEMU_PLAN.md  meson.build  meson_options.txt
block/: cue.c  meson.build
guest-tools/: README.md  build-guest-tools.sh  meson.build
guest-tools/test/: makefile  test_hypercall.c
guest-tools/vxd/: BUILD_VXD.BAT  README.md  README_VXD.TXT  hypback.asm  hypback.def  makefile
guest-tools/vxd/tools/uasm/: History.txt  UASM UEFI Guide.docx
guest-tools/vxd/tools/uasm/Samples/Linux64/: Lin64_3.asm  Lin64_4.asm
guest-tools/vxd/tools/uasm/Samples/Linux64/GTK/dialogs/: dialogs.asm  gtk_misc.inc  gtktextbuffer.inc  gtktextiter.inc
guest-tools/vxd/tools/uasm/Samples/Linux64/GTK/example0/: example-0.asm
guest-tools/vxd/tools/uasm/Samples/Win64/: makeoo.bat  oo.asm
hw/misc/: Kconfig  hypback.c  meson.build
include/hw/misc/: hypback.h
include/ui/: console.h  egl-helpers.h  gtk.h  sdl2.h
manager/: README.md  meson.build
manager/data/: qemu98-manager.desktop
manager/src/: app-config.vala  config-store.vala  main.vala  process-manager.vala  qmp-client.vala  snapshot-manager.vala  vm-controller.vala
manager/src/ui/: disk-image-wizard.vala  main-content.vala  media-panel.vala  menu-bar.vala  missing-binary-bar.vala  new-vm-wizard.vala  prefs-dialog.vala  snapshot-panel.vala  vm-config-editor.vala  vm-list.vala
manager/src/ui/wizards/: disk-image-wizard.vala  new-vm-wizard.vala
manager/tests/: meson.build  test-config-store.vala
qapi/: misc.json  ui.json
qemu98-docs/: BUILD.md  HYPBACK.md  VM_MANAGER.md  WIN9X_QEMU_PLAN.md
scripts/: meson-buildoptions.sh
tests/: meson.build
tests/guest-tools/: meson.build  test-guest-tools-iso.sh  test-vm-cdrom.sh
tests/qemu-iotests/: .last-elapsed-cache  315  315.out  check
tests/qtest/: hypback-test.c  meson.build
ui/: console-gl.c  egl-headless.c  egl-helpers.c  gtk-egl.c  gtk-gl-area.c  gtk.c  sdl2-gl.c  sdl2.c  spice-display.c
